--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,3 +17,18 @@ jobs:
           python-version: '3.9'
       - name: launch unit tests
         run: python -m unittest discover -s tests
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v3
+      - name: Setup Python
+        uses: actions/setup-python@v4.7.0
+        with:
+          python-version: '3.9'
+      - name: install flake8
+        run: python -m pip install flake8
+      - name: launch unit tests
+        run: |
+          flake8 calculator --count --select=E9,F63,F7,F82 --show-source --statistics
+          flake8 calculator --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
