--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,5 +30,5 @@ jobs:
         run: python -m pip install flake8
       - name: launch unit tests
         run: |
-          flake8 calculator --count --select=E9,F63,F7,F82 --show-source --statistics
-          flake8 calculator --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+          flake8 --count --select=E9,F63,F7,F82 --show-source --statistics
+          flake8 --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
