--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,3 +18,7 @@ jobs:
         run: python -m pip install -U build
       - name: build module
         run: python -m build
+      - uses: actions/upload-artifact@v3
+        with:
+          name: calculator-whl
+          path: dist/*.whl
