get runner's IP & write it to file

--- a/.github/workflows/self-hosted.yml
+++ b/.github/workflows/self-hosted.yml
@@ -11,3 +11,5 @@ jobs:
         run: whoami
       - name: Print groups
         run: groups
+      - name: Write self IP
+        run: echo "$(hostname -I)" > my_ip.txt
