--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,11 @@
 name: Test
 
 on:
+  workflow_call:
+    inputs:
+      python-version:
+        type: string
+        default: '3.9'
   pull_request:
   push:
     branches:
@@ -15,7 +20,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v4.7.0
         with:
-          python-version: '3.9'
+          python-version: ${{ inputs.python-version }}
       - name: launch unit tests
         run: python -m unittest discover -s tests
   lint:
@@ -26,7 +31,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v4.7.0
         with:
-          python-version: '3.9'
+          python-version: ${{ inputs.python-version }}
       - name: install flake8
         run: python -m pip install flake8
       - name: launch unit tests
