Revert "specify python version in step name"
This reverts commit 9de60a54cf2c2b9179b575acd41a50c72a081dcf.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v3
-      - name: Setup Python ${{ inputs.python-version }}
+      - name: Setup Python
         uses: actions/setup-python@v4.7.0
         with:
           python-version: ${{ inputs.python-version }}
